Add authentication system with login functionality

--- a/static/index.html
+++ b/static/index.html
@@ -75,9 +75,21 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             z-index: 2000;
         }
+        #logoutBtn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: #dc3545;
+            max-width: 150px;
+            z-index: 1000;
+        }
+        #logoutBtn:hover {
+            background: #c82333;
+        }
     </style>
 </head>
 <body>
+    <button id="logoutBtn">Logout</button>
     <div class="form-overlay">
         <h3>Add Contact</h3>
         <form id="contactForm">
@@ -109,6 +121,32 @@
     <div id="map"></div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
+        // Check authentication status
+        async function checkAuth() {
+            try {
+                const response = await fetch('/api/check-auth');
+                if (!response.ok) {
+                    window.location.href = '/login.html';
+                }
+            } catch (error) {
+                console.error('Auth check failed:', error);
+                window.location.href = '/login.html';
+            }
+        }
+
+        // Call checkAuth immediately
+        checkAuth();
+
+        // Handle logout
+        document.getElementById('logoutBtn').addEventListener('click', async () => {
+            try {
+                await fetch('/logout');
+                window.location.href = '/login.html';
+            } catch (error) {
+                console.error('Logout failed:', error);
+            }
+        });
+
         // Initialize the map
         const map = L.map('map').setView([46.603354, 1.888334], 6);
 
@@ -137,6 +175,13 @@
         async function loadContacts() {
             try {
                 const response = await fetch('/api/contacts');
+                if (!response.ok) {
+                    if (response.status === 401) {
+                        window.location.href = '/login.html';
+                        return;
+                    }
+                    throw new Error('Failed to load contacts');
+                }
                 const contacts = await response.json();
                 contacts.forEach(contact => {
                     addMarkerForContact(contact);
@@ -189,54 +234,35 @@
             };
 
             try {
-                const { latitude, longitude } = await geocodeAddress(formData.address);
-                const contact = {
-                    ...formData,
-                    latitude,
-                    longitude
-                };
-
-                // Save to API
                 const response = await fetch('/api/contacts', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify(contact)
+                    body: JSON.stringify(formData)
                 });
 
                 if (!response.ok) {
-                    throw new Error('Failed to save contact');
+                    if (response.status === 401) {
+                        window.location.href = '/login.html';
+                        return;
+                    }
+                    throw new Error('Failed to add contact');
                 }
 
-                const savedContact = await response.json();
-                
-                // Add marker
-                addMarkerForContact(savedContact);
-
-                // Clear form
-                e.target.reset();
-                
-                // Center map on new contact
-                map.setView([latitude, longitude], 13);
+                const contact = await response.json();
+                addMarkerForContact(contact);
+                document.getElementById('contactForm').reset();
             } catch (error) {
                 console.error('Error adding contact:', error);
-                alert('Failed to add contact. Please check the address and try again.');
+                alert(error.message || 'Failed to add contact. Please try again.');
             } finally {
                 document.getElementById('loading').style.display = 'none';
             }
         });
 
-        // Load existing contacts when the page loads
+        // Load contacts when the page loads
         loadContacts();
-
-        // Get user's location if permitted
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(position => {
-                const { latitude, longitude } = position.coords;
-                map.setView([latitude, longitude], 13);
-            });
-        }
     </script>
 </body>
 </html> 
