--- a/static/index.html
+++ b/static/index.html
@@ -5,125 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            font-family: Arial, sans-serif;
-        }
-        #map {
-            height: 100vh;
-            width: 100vw;
-        }
-        .form-overlay {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            z-index: 1000;
-            max-width: 300px;
-        }
-        .form-group {
-            margin-bottom: 10px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        button {
-            background: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-        button:hover {
-            background: #45a049;
-        }
-        .leaflet-popup-content {
-            margin: 10px;
-        }
-        .contact-popup {
-            font-size: 14px;
-            line-height: 1.4;
-        }
-        .contact-popup p {
-            margin: 5px 0;
-        }
-        #loading {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            z-index: 2000;
-        }
-        #logoutBtn {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            background: #dc3545;
-            max-width: 150px;
-            z-index: 1000;
-        }
-        #logoutBtn:hover {
-            background: #c82333;
-        }
-        #changePasswordBtn {
-            position: fixed;
-            top: 20px;
-            left: 180px;
-            background: #0d6efd;
-            max-width: 150px;
-            z-index: 1000;
-        }
-        #changePasswordBtn:hover {
-            background: #0b5ed7;
-        }
-    </style>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="logoutBtn">Logout</button>
-    <button id="changePasswordBtn" onclick="window.location.href='/change-password.html'">Change Password</button>
+    <div class="nav-buttons">
+        <button id="logoutBtn">Logout</button>
+        <button id="changePasswordBtn" onclick="window.location.href='/change-password.html'">Change Password</button>
+    </div>
+    
     <div class="form-overlay">
         <h3>Add Contact</h3>
         <form id="contactForm">
             <div class="form-group">
                 <label for="name">Name*</label>
-                <input type="text" id="name" required>
+                <input type="text" id="name" required placeholder="Enter name">
             </div>
             <div class="form-group">
                 <label for="company">Company</label>
-                <input type="text" id="company">
+                <input type="text" id="company" placeholder="Enter company name">
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" placeholder="Enter email address">
             </div>
             <div class="form-group">
                 <label for="telephone">Telephone</label>
-                <input type="tel" id="telephone">
+                <input type="tel" id="telephone" placeholder="Enter phone number">
             </div>
             <div class="form-group">
                 <label for="address">Address*</label>
-                <input type="text" id="address" required>
+                <input type="text" id="address" required placeholder="Enter full address">
             </div>
             <button type="submit">Add Contact</button>
         </form>
@@ -169,20 +81,6 @@
             subdomains: 'abcd'
         }).addTo(map);
 
-        // Style for popups
-        const style = document.createElement('style');
-        style.textContent = `
-            .leaflet-popup-content-wrapper {
-                background: rgba(255, 255, 255, 0.95);
-                border-radius: 8px;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-            }
-            .leaflet-popup-tip {
-                background: rgba(255, 255, 255, 0.95);
-            }
-        `;
-        document.head.appendChild(style);
-
         // Function to load contacts from the API
         async function loadContacts() {
             try {
@@ -206,7 +104,11 @@
 
         // Function to add a marker for a contact
         function addMarkerForContact(contact) {
-            const marker = L.marker([contact.latitude, contact.longitude]).addTo(map);
+            const marker = L.circleMarker([contact.latitude, contact.longitude], {
+                radius: 8,
+                className: 'custom-circle-marker'
+            }).addTo(map);
+            
             const popupContent = `
                 <div class="contact-popup">
                     <p><strong>${contact.name}</strong></p>
