fix: resolve menu toggle issues and button conflicts - Fix close button selectors, add event propagation control, improve click-outside handling

--- a/static/index.html
+++ b/static/index.html
@@ -9,16 +9,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="nav-buttons">
-        <button id="logoutBtn">Logout</button>
-        <button id="changePasswordBtn" onclick="window.location.href='/change-password.html'">Change Password</button>
+    <button id="settingsBtn" class="settings-btn" aria-label="Settings">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="3"></circle>
+            <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
+        </svg>
+    </button>
+    <div class="settings-menu" id="settingsMenu">
+        <div class="settings-header">
+            <h3>Settings</h3>
+            <button type="button" class="close-btn" id="closeSettingsBtn" aria-label="Close settings">&times;</button>
+        </div>
+        <div class="settings-content">
+            <button id="changePasswordBtn" class="settings-btn-item" onclick="window.location.href='/change-password.html'">Change Password</button>
+            <button id="logoutBtn" class="settings-btn-item danger">Logout</button>
+        </div>
     </div>
-    
+
     <button id="addContactBtn" class="add-contact-btn" aria-label="Add Contact">+</button>
     <div class="form-overlay" id="formOverlay">
         <div class="form-header">
             <h3>Add Contact</h3>
-            <button type="button" class="close-btn" aria-label="Close form">&times;</button>
+            <button type="button" class="close-btn" id="closeFormBtn" aria-label="Close form">&times;</button>
         </div>
         <form id="contactForm">
             <div class="form-group">
@@ -49,19 +61,53 @@
     <div id="map"></div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
+        // Settings menu toggle functionality
+        const settingsBtn = document.getElementById('settingsBtn');
+        const settingsMenu = document.getElementById('settingsMenu');
+        const closeSettingsBtn = document.getElementById('closeSettingsBtn');
+
+        settingsBtn.addEventListener('click', (e) => {
+            e.stopPropagation();
+            settingsMenu.classList.add('active');
+            settingsBtn.style.display = 'none';
+        });
+
+        closeSettingsBtn.addEventListener('click', (e) => {
+            e.stopPropagation();
+            settingsMenu.classList.remove('active');
+            settingsBtn.style.display = 'flex';
+        });
+
         // Form toggle functionality
         const addContactBtn = document.getElementById('addContactBtn');
         const formOverlay = document.getElementById('formOverlay');
-        const closeBtn = document.querySelector('.close-btn');
+        const closeFormBtn = document.getElementById('closeFormBtn');
 
-        addContactBtn.addEventListener('click', () => {
+        addContactBtn.addEventListener('click', (e) => {
+            e.stopPropagation();
             formOverlay.classList.add('active');
             addContactBtn.style.display = 'none';
         });
 
-        closeBtn.addEventListener('click', () => {
+        closeFormBtn.addEventListener('click', (e) => {
+            e.stopPropagation();
             formOverlay.classList.remove('active');
             addContactBtn.style.display = 'flex';
+        });
+
+        // Close menus when clicking outside
+        document.addEventListener('click', (e) => {
+            // Handle settings menu
+            if (!settingsMenu.contains(e.target) && e.target !== settingsBtn) {
+                settingsMenu.classList.remove('active');
+                settingsBtn.style.display = 'flex';
+            }
+            
+            // Handle contact form
+            if (!formOverlay.contains(e.target) && e.target !== addContactBtn) {
+                formOverlay.classList.remove('active');
+                addContactBtn.style.display = 'flex';
+            }
         });
 
         // When form is submitted successfully, close the form
