--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,10 @@
                 <label for="address">Address*</label>
                 <input type="text" id="address" required placeholder="Enter full address">
             </div>
+            <div class="form-group">
+                <label for="notes">Notes</label>
+                <textarea id="notes" placeholder="Enter any additional notes"></textarea>
+            </div>
             <button type="submit">Add Contact</button>
         </form>
     </div>
@@ -86,6 +90,10 @@
             <div class="form-group">
                 <label for="editAddress">Address*</label>
                 <input type="text" id="editAddress" required placeholder="Enter full address">
+            </div>
+            <div class="form-group">
+                <label for="editNotes">Notes</label>
+                <textarea id="editNotes" placeholder="Enter any additional notes"></textarea>
             </div>
             <button type="submit">Update Contact</button>
         </form>
@@ -154,7 +162,8 @@
                 company: document.getElementById('company').value,
                 email: document.getElementById('email').value,
                 telephone: document.getElementById('telephone').value,
-                address: document.getElementById('address').value
+                address: document.getElementById('address').value,
+                notes: document.getElementById('notes').value
             };
 
             try {
@@ -260,10 +269,60 @@
                     ${contact.email ? `<p>Email: ${contact.email}</p>` : ''}
                     ${contact.telephone ? `<p>Tel: ${contact.telephone}</p>` : ''}
                     <p>Address: ${contact.address}</p>
-                    <button class="edit-contact-btn" onclick="editContact(${JSON.stringify(contact).replace(/"/g, '&quot;')})">Edit</button>
+                    ${contact.notes ? `<p>Notes: ${contact.notes}</p>` : ''}
+                    <div class="button-group">
+                        <button class="edit-contact-btn" onclick="editContact(${JSON.stringify(contact).replace(/"/g, '&quot;')})">Edit</button>
+                        <button class="delete-contact-btn" onclick="deleteContact(${contact.id}, '${contact.name.replace(/'/g, "\\'")}')">Delete</button>
+                    </div>
                 </div>
             `;
             marker.bindPopup(popupContent);
+        }
+
+        // Function to delete a contact
+        async function deleteContact(contactId, contactName) {
+            // Ask for confirmation with the word DELETE
+            const userInput = prompt(`To delete ${contactName}, please type DELETE:`);
+            if (userInput !== 'DELETE') {
+                alert('Contact deletion cancelled.');
+                return;
+            }
+
+            try {
+                document.getElementById('loading').textContent = 'Deleting contact...';
+                document.getElementById('loading').style.display = 'block';
+
+                const response = await fetch(`/api/contacts/${contactId}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    }
+                });
+
+                if (!response.ok) {
+                    if (response.status === 401) {
+                        window.location.href = '/login.html';
+                        return;
+                    }
+                    throw new Error('Failed to delete contact');
+                }
+
+                // Clear all existing markers and reload contacts
+                map.eachLayer((layer) => {
+                    if (layer instanceof L.CircleMarker) {
+                        map.removeLayer(layer);
+                    }
+                });
+                await loadContacts();
+                alert('Contact deleted successfully.');
+
+            } catch (error) {
+                console.error('Error deleting contact:', error);
+                alert(error.message || 'Failed to delete contact. Please try again.');
+            } finally {
+                document.getElementById('loading').style.display = 'none';
+                document.getElementById('loading').textContent = 'Geocoding address...';
+            }
         }
 
         // Function to geocode address using Nominatim
@@ -300,6 +359,7 @@
             document.getElementById('editEmail').value = contact.email || '';
             document.getElementById('editTelephone').value = contact.telephone || '';
             document.getElementById('editAddress').value = contact.address;
+            document.getElementById('editNotes').value = contact.notes || '';
             
             // Show the edit form
             editFormOverlay.classList.add('active');
@@ -330,6 +390,7 @@
                     email: document.getElementById('editEmail').value,
                     telephone: document.getElementById('editTelephone').value,
                     address: newAddress,
+                    notes: document.getElementById('editNotes').value,
                     latitude: latitude,
                     longitude: longitude
                 };
